...
    <string name="waitlist_capacity_altered">Waitlist capacity has been altered.</string>
    <string name="waitlist_registration_closed">Waitlist registration period closed.</string>
    <string name="waitlist_registration_period_altered">Waitlist registration period has been altered.</string>
    <string name="waitlist_organizer_cannot_join">You can\'t join the waitlist for an event you organize.</string>
    <string name="join_waitlist_your_event">YOUR EVENT</string>
    <string name="event_switched_to_private">This event has been switched to a private event.</string>
    <string name="validation_email_required">Email is required.</string>
    <string name="validation_email_invalid">Invalid email format.</string>
    <string name="validation_participants">Enter a valid number of participants (1 or more).</string>
    <string name="validation_notification_method">Please select a notification method.</string>

    <!-- Delete account -->
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirm_message">Are you sure you want to delete your account? This cannot be undone.</string>
...
